--- a/src/App.css
+++ b/src/App.css
@@ -40,5 +40,52 @@ h1 {
 	color: black;
 }
 .red {
+	padding: 20px;
 	color: red;
+}
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 10px;
+	overflow: hidden;
+	background-color: #333;
+}
+
+li {
+	float: left;
+}
+
+li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+li a:hover:not(.active) {
+	background-color: #111;
+}
+
+.active {
+	background-color: #04aa6d;
+}
+.username {
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.userimage {
+	border-radius: 50%;
+	width: 50px;
+}
+.display-block {
+	display: block;
+}
+.logout {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin-top: 8px;
+	margin-right: 10px;
 }
