--- a/src/App.css
+++ b/src/App.css
@@ -1,91 +1,127 @@
 .App {
-	text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-	height: 40vmin;
-	pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-	color: #61dafb;
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 h1 {
-	color: black;
+  color: black;
 }
 .red {
-	padding: 20px;
-	color: red;
+  padding: 20px;
+  color: red;
 }
 ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 10px;
-	overflow: hidden;
-	background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  padding: 10px;
+  overflow: hidden;
+  background-color: #333;
 }
 
 li {
-	float: left;
+  float: left;
 }
 
 li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 li a:hover:not(.active) {
-	background-color: #111;
+  background-color: #111;
 }
 
 .active {
-	background-color: #04aa6d;
+  background-color: #04aa6d;
+  color: white;
 }
 .username {
-	position: absolute;
-	top: 0;
-	right: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 .userimage {
-	border-radius: 50%;
-	width: 50px;
+  border-radius: 50%;
+  width: 50px;
 }
 .display-block {
-	display: block;
+  display: block;
 }
 .logout {
-	position: absolute;
-	top: 0;
-	right: 0;
-	margin-top: 8px;
-	margin-right: 10px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 10px;
+}
+.poster {
+  height: auto;
+  width: 200px;
+}
+
+.myCard {
+  text-align: center;
+}
+
+.container {
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.list {
+  align-items: center;
+  justify-content: center;
+}
+
+.card-detail {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  margin-top: 10px;
+  margin-left: 43%;
+  padding: 10px;
+}
+
+.grid {
+  display: grid;
+  grid-gap: 10px;
+  grid-auto-flow: column;
+  grid-template-columns: 500px 500px 500px 500px;
 }
